Cleaning warnings and code optimisation